// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Villain component renders correctly 1`] = `
<div>
  <div
    class="Villain-root-1 Villain-contained-10"
  >
    <div
      class="MuiGrid-root Villain-grid-3 MuiGrid-container MuiGrid-spacing-xs-3"
    >
      <div
        class="MuiGrid-root Grid-item-13 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4"
      >
        <div
          class="Villain-content-6 ColorPair-root-15 ColorPair-blue800-28"
        >
          <h3
            class="MuiTypography-root Villain-title-4 Typography-root-41 MuiTypography-h4"
            data-testid="typography"
          >
            H2 Heading
          </h3>
          <div
            class="Villain-text-8"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit. In vel nisl blandit, finibus augue et, ultricies felis. In id nunc nunc. Nullam ac nulla justo. Sed sollicitudin volutpat arcu at laoreet. Ut vel augue nisi. Pellentesque egestas sapien et mauris rutrum laoreet. Integer tellus enim, posuere vel nibh suscipit, rhoncus ornare lectus. Mauris ac interdum nibh, quis dictum nulla.
          </div>
          <button
            class="MuiButtonBase-root MuiButton-root Button-root-49 MuiButton-contained Button-contained-51 Button-containedDarkBg-58 Villain-cta-9 MuiButton-containedPrimary"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label Button-label-52"
            >
              Call to action
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
      <div
        class="MuiGrid-root Grid-item-13 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8"
      >
        <div
          class="Villain-image-7"
        >
          <img
            alt="Lorem ipsum"
            class="Villain-media-12 Media-root-69"
            src="path-to-image"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Villain component renders correctly on reversed when screen size is larger than sm  1`] = `
<div>
  <div
    class="Villain-root-261 Villain-contained-270 Villain-reversed-262"
  >
    <div
      class="MuiGrid-root Villain-grid-263 MuiGrid-container MuiGrid-spacing-xs-3 MuiGrid-direction-xs-row-reverse"
    >
      <div
        class="MuiGrid-root Grid-item-273 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4"
      >
        <div
          class="Villain-content-266 ColorPair-root-275 ColorPair-blue800-288"
        >
          <h3
            class="MuiTypography-root Villain-title-264 Typography-root-301 MuiTypography-h4"
            data-testid="typography"
          >
            H2 Heading
          </h3>
          <div
            class="Villain-text-268"
          >
            Lorem ipsum dolor sit amet.
          </div>
          <button
            class="MuiButtonBase-root MuiButton-root Button-root-309 MuiButton-contained Button-contained-311 Button-containedDarkBg-318 Villain-cta-269 MuiButton-containedPrimary"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label Button-label-312"
            >
              Call to action
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
      <div
        class="MuiGrid-root Grid-item-273 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8"
      />
    </div>
  </div>
</div>
`;

exports[`Villain component renders full size 1`] = `
<div>
  <div
    class="Villain-root-121 Villain-fullSize-131 ColorPair-root-133 ColorPair-blue800-146"
  >
    <div
      class="Container-root-159"
    >
      <div
        class="MuiContainer-root Villain-container-125 MuiContainer-maxWidthXl"
      >
        <div
          class="Villain-content-126"
        >
          <h2
            class="MuiTypography-root Villain-title-124 Typography-root-161 Typography-underline-163 Typography-darkBg-164 MuiTypography-h2"
            data-testid="typography"
          >
            H2 Heading
          </h2>
          <div
            class="Villain-text-128"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit. In vel nisl blandit, finibus augue et, ultricies felis. In id nunc nunc. Nullam ac nulla justo. Sed sollicitudin volutpat arcu at laoreet. Ut vel augue nisi. Pellentesque egestas sapien et mauris rutrum laoreet. Integer tellus enim, posuere vel nibh suscipit, rhoncus ornare lectus. Mauris ac interdum nibh, quis dictum nulla.
          </div>
          <button
            class="MuiButtonBase-root MuiButton-root Button-root-169 MuiButton-contained Button-contained-171 Button-containedDarkBg-178 Villain-cta-129 MuiButton-containedPrimary"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label Button-label-172"
            >
              Call to action
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
    </div>
    <img
      alt="Lorem ipsum"
      class="Villain-image-127 Media-root-189"
      src="path-to-image"
    />
  </div>
</div>
`;

exports[`Villain component renders full size and reversed 1`] = `
<div>
  <div
    class="Villain-root-191 Villain-fullSize-201 Villain-reversed-192 ColorPair-root-203 ColorPair-blue800-216"
  >
    <div
      class="Container-root-229"
    >
      <div
        class="MuiContainer-root Villain-container-195 MuiContainer-maxWidthXl"
      >
        <div
          class="Villain-content-196"
        >
          <h2
            class="MuiTypography-root Villain-title-194 Typography-root-231 Typography-underline-233 Typography-darkBg-234 MuiTypography-h2"
            data-testid="typography"
          >
            H2 Heading
          </h2>
          <div
            class="Villain-text-198"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit. In vel nisl blandit, finibus augue et, ultricies felis. In id nunc nunc. Nullam ac nulla justo. Sed sollicitudin volutpat arcu at laoreet. Ut vel augue nisi. Pellentesque egestas sapien et mauris rutrum laoreet. Integer tellus enim, posuere vel nibh suscipit, rhoncus ornare lectus. Mauris ac interdum nibh, quis dictum nulla.
          </div>
          <button
            class="MuiButtonBase-root MuiButton-root Button-root-239 MuiButton-contained Button-contained-241 Button-containedDarkBg-248 Villain-cta-199 MuiButton-containedPrimary"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label Button-label-242"
            >
              Call to action
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
    </div>
    <img
      alt="Lorem ipsum"
      class="Villain-image-197 Media-root-259"
      src="path-to-image"
    />
  </div>
</div>
`;

exports[`Villain component renders reversed 1`] = `
<div>
  <div
    class="Villain-root-71 Villain-contained-80 Villain-reversed-72"
  >
    <div
      class="MuiGrid-root Villain-grid-73 MuiGrid-container MuiGrid-spacing-xs-3 MuiGrid-direction-xs-column-reverse"
    >
      <div
        class="MuiGrid-root Grid-item-83 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4"
      >
        <div
          class="Villain-content-76 ColorPair-root-85 ColorPair-blue800-98"
        >
          <h3
            class="MuiTypography-root Villain-title-74 Typography-root-111 MuiTypography-h4"
            data-testid="typography"
          >
            H2 Heading
          </h3>
          <div
            class="Villain-text-78"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit. In vel nisl blandit, finibus augue et, ultricies felis. In id nunc nunc. Nullam ac nulla justo. Sed sollicitudin volutpat arcu at laoreet. Ut vel augue nisi. Pellentesque egestas sapien et mauris rutrum laoreet. Integer tellus enim, posuere vel nibh suscipit, rhoncus ornare lectus. Mauris ac interdum nibh, quis dictum nulla.
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root Grid-item-83 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8"
      >
        <div
          class="Villain-image-77"
        >
          <img
            alt="Lorem ipsum"
            class="Villain-media-82 Media-root-119"
            src="path-to-image"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
